# projects-manager

./: .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 47dc348dbb09_initial_migration.py
src/: __main__.py  main.py
src/adapters/database/: factory.py  repository.py  session.py
src/adapters/database/tables/: base.py  project.py
src/adapters/fastapi/: api.py  schemas.py  utils.py
src/core/entities/: project.py
src/core/ports/: project_repository.py
src/core/services/: factory.py  project_service.py
tests/: conftest.py
tests/adapters/: test_fastapi_schemas.py  test_repository.py
tests/core/entities/: test_project.py
tests/core/services/: test_project_service.py
